# chempion

./: index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  backup.rs  clients.rs  export.rs  import.rs  mod.rs  payments.rs  reports.rs  settings.rs  subscriptions.rs  visits.rs  workouts.rs
src-tauri/src/db/: migrations.rs  mod.rs  schema.rs
src-tauri/src/models/: mod.rs
src-tauri/src/utils/: mod.rs
src/components/: ClientQuickEdit.tsx  ConfirmDialog.tsx  Layout.tsx  NotificationToast.tsx  PaymentsTab.tsx  SearchBar.tsx  SubscriptionBadge.tsx  SubscriptionsTab.tsx  VisitsTab.tsx  WorkoutsTab.tsx
src/lib/: formatters.ts  tauri.ts  validators.ts
src/pages/: ClientDetailPage.tsx  ClientFormPage.tsx  ClientsPage.tsx  DashboardPage.tsx  ImportPage.tsx  LoginPage.tsx  PaymentsPage.tsx  ReportsPage.tsx  SettingsPage.tsx  VisitsPage.tsx
src/store/: authStore.ts  uiStore.ts
src/types/: index.ts
